<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vinilos</string>
    <string name="birth_date_label">Birth date</string>
    <string name="album_cover_description">Portada del álbum</string>
    <string name="albums_title">Álbumes</string>
    <string name="loading_albums">Cargando álbumes…</string>
    <string name="error_loading_albums">Error al cargar álbumes</string>
    
...
